<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright 2013 The Android Open Source Project

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<resources>

    <string name="app_name">FeedSync Sample</string>
    <string name="account_name">FeedSync Service</string>
    <string name="title_entry_detail">Entry Detail</string>
    <string name="loading">Waiting for sync...</string>
    <string name="description_refresh">Refresh</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="picasso">picasso example</string>
    <string name="load_image">Retrieve Image</string>
    <string name="gotofeed">Open Feed</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gotocards">Open CardsUI</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="remember_me">Remember me</string>
    <string name="header_symptom_login">SYMPTOM MANAGEMENT LOGIN</string>
    <string name="header_text_symptom_patient">PATIENT</string>
    <string name="error_incorrect_credentials">The credentials are incorrect</string>

</resources>