<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.network.sync.basicsyncadapter.MainActivity">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" android:showAsAction="never" />
    <item android:id="@+id/action_test" android:title="@string/load_image"
        android:orderInCategory="100" android:showAsAction="ifRoom" />
    <item android:id="@+id/action_gotofeed" android:title="@string/gotofeed"
        android:orderInCategory="100" android:showAsAction="ifRoom" />
    <item android:id="@+id/action_opencards" android:title="@string/gotocards"
        android:orderInCategory="100" android:showAsAction="always" />

    <item android:id="@+id/action_websearch"
        android:icon="@drawable/action_search"
        android:title="@string/action_websearch"
        android:showAsAction="ifRoom|withText" />
</menu>
